# boresight

./: Cargo.toml  README.md
.github/workflows/: ci.yml  pages.yml
docs/: boresight-demo-40x.tape  index.html
examples/config/: README.md  attitude.csv  pass.toml  run.sh
examples/legnica-2026-06-10/: README.md  run.sh
examples/minimal/: README.md  attitude.csv  run.sh  sat.tle
src/: app.rs  astro.rs  config.rs  main.rs  orbit.rs  pointing.rs  scene.rs  ui.rs
